# MSc-Research

./: .gitignore
customsuperres/: Makefile  customsr  main.cpp
depth-capture/: .gitignore  DepthCapturer.files  Makefile  Makefile.arch  libfreenect.h  main.cpp
depth_capture/: CMakeLists.txt  depth_capture.cpp
old-super-resolution/: Makefile  super_resolution.cpp
realistic-visualization/: LICENSE  Makefile  bag.ply  bag_half.ply  basicShader.frag  basicShader.vert  initShaders.cpp  main.cpp  myDataStructures.h
rotate-align/: Makefile  Makefile.arch  a.out  main.cpp  teste.ply
rotate_align/: CMakeLists.txt  Makefile  main.cpp  rotate_align.cpp
super-resolution/: Makefile  cap_srmesh_0.ply  customsr  main.cpp
super_resolution/: CMakeLists.txt  super_resolution.cpp
superres/: Makefile  convert.cpp  png_to_video_lossless.txt  super_resolution.cpp  test.avi  video_to_bmp.txt
